Long usernames should no longer overflow outside posts' listing

--- a/static/css/nested.css
+++ b/static/css/nested.css
@@ -62,4 +62,7 @@ img.pfp {
 	display: inline-block;
 	height: 100%;
 	vertical-align: top;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	max-width: 75%;
 }
